--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -9,6 +9,7 @@
     background-color: var(--purple);
     border-radius: 24px;
     cursor: pointer;
+    flex-shrink: 0;
 }
 .open-map p {
     font-size: 16px;
