[UPDATE] slider service detail

--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -82,7 +82,7 @@
 
 .service-detail__head {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -90,20 +90,21 @@
 }
 
 .service-detail .service-detail__left {
-    width: 40%;
+    width: 42%;
     height: 100%;
-    padding: 16px;
+    padding: 24px;
     background-color: #fff;
     flex-shrink: 0;
 }
 
 .service-detail .service-detail__right {
-    width: 60%;
+    width: 58%;
     padding: 24px;
     background-color: #fff;
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 24px;
 }
 
 .service-detail .detail-left__img {
@@ -118,26 +119,97 @@
     flex-shrink: 0;
     border-radius: 8px;
 }
-.detail-left__img-item{
+.detail-left__img-item {
     width: 100%;
     height: 450px;
     position: relative;
-    
 }
-.detail-left__img-bg{
+.detail-left__img-bg {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: 1;
 }
-.detail-left__img-item-video{
+.detail-left__img-item-video {
     backdrop-filter: blur(10px);
     position: absolute;
     z-index: 2;
     height: 100%;
     width: 100%;
     object-fit: contain;
+}
+.service-detail .detail-left__slider-nav {
+    margin-top: 16px;
+}
+.slick-current .slider-nav__video,
+.slick-current .slider-nav__img {
+    border: 2px solid var(--red-cl);
+}
+.service-detail .slick-track {
+    margin: unset;
+}
+/* cus btn arr img */
+.detail-btn__prev,
+.detail-btn__next {
+    position: absolute;
+    opacity: 0;
+    z-index: 100;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 100%;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    visibility: hidden;
+    transition: all 0.3s ease-out;
+    padding: 3px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.detail-btn__prev {
+    top: 50%;
+    transform: translateY(-50%) rotate(180deg);
+    left: 0;
+}
+.detail-btn__next {
+    right: 0;
+}
+.detail-btn__prev .detail-btn__prev-img,
+.detail-btn__next .detail-btn__next-img {
+    width: 30px !important;
+    height: 30px !important;
+}
+.detail-left__img:hover .detail-btn__prev {
+    opacity: 0.7;
+    visibility: visible;
+    left: 14px;
+    transition: all 0.3s ease-in;
+}
+.detail-left__img:hover .detail-btn__next {
+    opacity: 0.7;
+    right: 14px;
+    visibility: visible;
+    transition: all 0.3s ease-in;
+}
+
+.slider-nav__video,
+.slider-nav__img {
+    width: 82px !important;
+    cursor: pointer;
+    height: 82px;
+    border: 2px solid rgba(204, 204, 204, 0.419);
+}
+.slider-nav__img img {
+    width: 100%;
+    height: 100%;
+}
+.slider-nav__img {
+    width: 82px;
+    height: 82px;
+}
+.slider-nav__video .slider-video {
+    width: 100%;
+    height: 100%;
 }
 
 .service-detail .service-detail__org .service-detail__title {
@@ -370,7 +442,7 @@
     width: 20px;
     height: 20px;
 }
-.service-detail .detail-right__no{
+.service-detail .detail-right__no {
     color: var(--red-cl);
     font-size: 14px;
     line-height: 16px;
@@ -587,6 +659,21 @@
 }
 
 @media only screen and (max-width: 1023px) {
+    .detail-left__slider-nav {
+        display: none;
+    }
+    .detail-btn__prev,
+    .detail-btn__next {
+        opacity: 0.7;
+        background-color: #fff;
+        visibility: visible;
+    }
+    .detail-btn__next {
+        right: 14px;
+    }
+    .detail-btn__prev {
+        left: 14px;
+    }
     .service-detail {
         padding: 0 0 92px 0;
         position: relative;
@@ -650,7 +737,10 @@
         width: 100%;
         height: 375px;
     }
-
+    .service-detail .service-detail__wrap {
+        width: 100%;
+        height: 100%;
+    }
     .service-detail .service-detail__mobile-name {
         font-weight: 700;
         font-size: 16px;
@@ -663,11 +753,14 @@
         text-overflow: ellipsis;
         word-break: break-word;
     }
-    .detail-left__img-item{
-        height: unset;
-    }
-    .detail-left__img-item-vd{
+    .detail-left__img-item {
         height: 345px;
+    }
+    .detail-left__img-item-vd {
+        height: 345px;
+    }
+    .service-detail .slick-slider {
+        position: unset;
     }
 
     .service-detail .service-detail__mobile-favorite {
@@ -872,7 +965,7 @@
         font-size: 14px;
         margin: 0;
     }
-    .service-detail .detail-right__no{
+    .service-detail .detail-right__no {
         text-align: center;
         width: 100%;
     }
