--- a/src/features/Filter/filter-services.css
+++ b/src/features/Filter/filter-services.css
@@ -4,6 +4,7 @@
     padding: 8px 0px;
     margin-top: 16px;
 }
+
 .filter-ser-list li {
     background-color: #fff;
     padding: 8px 16px;
@@ -17,6 +18,150 @@
     border-radius: 16px;
     transition: all 0.4s;
 }
+
+/* filter org */
+.filter-orgs-cnt {
+    width: 100%;
+}
+
+.filter-orgs-tags {
+    margin-bottom: 12px;
+    padding: 4px 0px;
+}
+
+.filter-orgs-cnt__title {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    color: var(--purple);
+}
+
+.filter-orgs-cnt .MuiCheckbox-root {
+    padding: 0px !important;
+    margin-right: 4px;
+}
+
+.filter-orgs-cnt .Mui-checked {
+    color: var(--purple) !important;
+}
+
+.filter-orgs-cnt .tags-list {
+    margin-top: 8px;
+}
+
+.filter-orgs-cnt .tags-list__item {
+    margin: 4px 0px;
+    cursor: pointer;
+}
+
+.filter-orgs-cnt .tags-list__item .item-name {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    transition: all .3s;
+}
+
+.tag-item-name-act {
+    color: var(--purple);
+    font-weight: 600;
+    transition: all .3s;
+}
+
+.filter-orgs-location-item {
+    padding: 4px;
+    border: solid 1px var(--grey);
+    border-radius: 8px;
+    margin: 6px 0px;
+    cursor: pointer;
+}
+
+.filter-orgs-location-item img {
+    width: 24px;
+    height: 24px;
+}
+
+.filter-orgs-location-item .filter-orgs-item__text {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    margin-left: 2px;
+}
+
+.filter-orgs-tags .MuiFormControlLabel-root {
+    margin: 4px 0px !important;
+}
+
+.filter-orgs-tags .MuiRadio-root {
+    padding: 0px !important;
+}
+
+.filter-orgs-tags .MuiTypography-root {
+    font-size: 14px !important;
+    line-height: 16px !important;
+    font-weight: 500 !important;
+    margin-left: 4px !important;
+}
+.filter-org-province-list{
+    width: 40vw;
+    height: 90vh;
+    background-color: var(--white);
+    overflow-y: scroll;
+    padding: 12px;
+    position: relative;
+}
+.filter-org-province-list .title{
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+}
+.filter-org-province-list__input{
+    margin: 8px 0px;
+    width: 100%;
+    /* position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: var(--white); */
+}
+.filter-org-province-list__input input{
+    width: 100%;
+    padding: 6px 12px;
+    border: solid 1px var(--grey);
+    outline: none;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    border-radius: 8px;
+}
+.filter-org-province-list .list-item{
+    margin: 12px 0px;
+}
+.filter-org-province-list .left-checkbox{
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border: solid 2px var(--text-hover);
+    cursor: pointer;
+    margin-right: 6px;
+    padding: 3px;
+}
+.filter-org-province-list .left-checkbox-act{
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    background-color: var(--purple);
+}
+.filter-org-province-list .list-item .left{
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    color: var(--text-black);
+}
+.filter-org-province-list .list-item button{
+    border: none;
+    background-color: transparent;    
+}
+
 /* Mobile */
 @media only screen and (max-width: 767px) {
     .filter-ser-list li {
@@ -24,18 +169,22 @@
         padding: 4px 8px;
         font-size: 12px;
     }
+
     .filter-ser-cnt {
         padding: 12px;
         overflow-x: scroll;
         margin-top: 0;
     }
+
     .filter-ser-list {
         width: max-content;
     }
+
     .home-promo-ser {
         width: 100%;
         overflow-x: scroll;
     }
+
     /* .home-se-re .home-promo-ser {
         margin-top: 16px;
     } */
