--- a/src/features/Head/head.css
+++ b/src/features/Head/head.css
@@ -104,6 +104,16 @@
     height: 36px;
     object-fit: cover;
 }
+.noti-empty {
+    margin-top: 14px;
+    font-size: 14px;
+    color: gray;
+}
+.hd-cnt__right-avatar .hd-noti__head-imgcheck {
+    width: 20px;
+    height: 20px;
+    margin-left: 4px;
+}
 .hd-cnt__right-avatar-dot {
     width: 12px;
     height: 12px;
@@ -356,7 +366,7 @@
         gap: 0 8px;
     }
     .hd-cnt__right-user-name {
-       color: var(--bgWhite);
+        color: var(--bgWhite);
     }
     .hd-cnt__right-cart {
         display: none;
