--- a/src/features/HomeDiscounts/style.css
+++ b/src/features/HomeDiscounts/style.css
@@ -1,8 +1,8 @@
 .home-discounts {
     margin: 32px 0px;
     width: 100vw;
-    background-color: var(--red-cl);
-    padding: 32px 0px;
+    background-color: #ffe3d2;
+    padding: 0 0 32px 0px;
 }
 
 .home-discounts__list {
@@ -11,19 +11,24 @@
     grid-gap: 16px;
 }
 .home-discounts__title {
+    padding: 16px;
+    background-color: #ff721f;
+    margin-bottom: 16px;
+    border-radius: 0 0 16px 16px;
+}
+.home-discounts__title span {
     font-weight: 700;
     font-size: 24px;
-    line-height: 1;
+    line-height: normal;
     text-transform: uppercase;
-    color: #ffe818;
-    margin-bottom: 16px;
+    color: white;
 }
 .home-discounts__title span:nth-child(2) {
     cursor: pointer;
     font-size: 16px;
     line-height: 18px;
     font-weight: 700;
-    color: #fff;
+    color: white;
     text-transform: capitalize;
 }
 .home-discounts__list .item-cnt {
@@ -160,11 +165,15 @@
         grid-gap: 12px;
     }
     .home-discounts__title {
-        padding: 12px 12px 0 12px;
-        margin-bottom: 0;
+        padding: 5px 12px;
+        border-radius: 0 0 8px 8px;
+        margin: 0 12px;
     }
     .home-discounts__title span:nth-child(1) {
-        font-size: 14px;
+        font-weight: 800;
+        font-size: 18px;
+        text-transform: capitalize;
+        line-height: 24px;
     }
     .home-discounts__title span:nth-child(2) {
         font-size: 12px;
