[UPDATE] filter search result

--- a/src/features/SearchResults/search-results.css
+++ b/src/features/SearchResults/search-results.css
@@ -11,6 +11,9 @@
     width: 16.6%;
     background-color: var(--bgWhite);
 }
+.se-re-cnt__left .filter-orgs-cnt{
+    padding: 0px 12px;
+}
 
 .se-re-cnt__left-top {
     padding: 0px 4px;
