--- a/src/features/Account/components/UserPaymentInfo/style.css
+++ b/src/features/Account/components/UserPaymentInfo/style.css
@@ -10,6 +10,10 @@
 .user-pm-de-cnt{
     margin-top: 12px;
 }
+.user-pm-de-cnt .img-icon{
+    width: 24px;
+    height: 24px;
+}
 
 .user-address-form span {
     font-size: 16px;
