--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -15,6 +15,15 @@
     padding: 0px 12px;
     border-radius: 8px;
 }
+.re-cart-item-group__head .btn-loading{
+    margin-left: 8px;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    padding: 4px 6px;
+    border-radius: 6px;
+}
+
 
 .re-cart-item-group__head .left img {
     margin-right: 4px;
@@ -192,6 +201,72 @@
 .re-cart-pmt-drawer {
     width: 41.5vw;
     padding: 12px;
+}
+.re-cart-branches{
+    background-color: var(--white);
+    padding: 24px 12px;
+    width: 50vw;
+    height: fit-content;
+    max-height: 80vh;
+    overflow-y: scroll;
+}
+.re-cart__branch-item .branch-img{
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
+}
+.re-cart__branch-item{
+    margin: 6px 0px;
+    padding: 6px;
+    border-radius: 6px;
+    border:  solid 1px var(--grey);
+    cursor: pointer;
+    position: relative;
+}
+.re-cart__branch-item-ck{
+    position: absolute;
+    z-index: 1;
+    background-color: var(--orange);
+    top: 0;
+    left: 0;
+    margin: -8px 0px 0px -4px;
+    padding: 2px 6px;
+    font-size: 12px;
+    color: var(--white);
+    font-weight: 500;
+    border-radius: 6px;
+}
+.re-cart-item-group__add{
+    width: 100%;
+    background-color: var(--grey_2);
+    padding: 9px;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--purple);
+}
+.re-cart__branch-item .detail{
+    display: flex;
+    flex-direction: column;
+    margin-left: 8px;
+}
+.re-cart__branch-item .detail .branch-name{
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    color: var(--black);
+}
+.re-cart__branch-item .detail .branch-address{
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    margin: 3px 0px;
+}
+.re-cart__branch-item .detail .branch-phone{
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--text-hover);
 }
 
 @media only screen and (max-width: 1023px) {
@@ -376,5 +451,20 @@
         line-height: 12px;
         font-weight: 500;
         margin: 0px 0px 0px 0px;
+    }
+    .re-cart-item-group__add{
+        background-color: var(--white);
+        padding: 0px 10px;
+    }
+    .re-cart-item-group__add-dot{
+        width: 8px;
+        height: 8px;
+        border-radius: 100%;
+        margin-right: 6px;
+        background-color: var(--purple);
+    }
+    .re-cart-branches{
+        width: 94vw;
+        border-radius: 12px;
     }
 }
