--- a/src/components/LoadingSketion/style.css
+++ b/src/components/LoadingSketion/style.css
@@ -15,11 +15,11 @@
     background-color: var(--grey_2);
 }
 .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(1){
-    /* width: 100% !important; */
-    /* height: 100% !important; */
+    width: 100% !important;
+    height: 100% !important;
 }
 .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(2){
-    /* height: 100px !important; */
+    height: 100px !important;
 }
 .result-orgs-loading-cnt .service-item{
     width: 16.6%;
