--- a/src/features/Calendar/style.css
+++ b/src/features/Calendar/style.css
@@ -1,6 +1,9 @@
 .cal-cnt__tab-cnt .MuiTabPanel-root {
     padding: 12px 0px !important;
 }
+.css-nzlq59:hover {
+    background-color: unset !important;
+}
 
 .cal-cnt__tab-cnt .MuiButtonBase-root {
     padding: 8px 16px !important;
@@ -36,7 +39,6 @@
 .appointment-item-time-mb {
     display: none;
 }
-
 
 @media only screen and (max-width: 1023px) {
     .cal-cnt__tab-cnt-head {
