--- a/src/features/PopupSuccess/popupSuccess.css
+++ b/src/features/PopupSuccess/popupSuccess.css
@@ -14,8 +14,15 @@
     font-size: 18px;
     line-height: 26px;
     font-weight: 700;
-    color: var(--purple);
     text-align: center;
+}
+.pu-success__title span {
+    margin-top: 8px;
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 700;
+    text-align: center;
+    color: var(--purple);
 }
 @media only screen and (max-width: 767px) {
     .pu-success {
