--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ html {
     margin-top: 24px;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 .flex-row {
     display: flex;
     align-items: center;
@@ -162,7 +166,7 @@ body > iframe {
 .cursor-pointer {
     cursor: pointer;
 }
-#cprhliqipldavybercftg .chat-button--img-container{
+#cprhliqipldavybercftg .chat-button--img-container {
     display: none !important;
 }
 @media only screen and (max-width: 1023px) {
