--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 :root {
     --bg-white: rgb(255, 255, 255);
     --bg-gray-dark: #e5e5e5;
@@ -162,7 +164,7 @@ body > iframe {
 .cursor-pointer {
     cursor: pointer;
 }
-#cprhliqipldavybercftg .chat-button--img-container{
+#cprhliqipldavybercftg .chat-button--img-container {
     display: none !important;
 }
 @media only screen and (max-width: 1023px) {
