--- a/src/features/Home/home.css
+++ b/src/features/Home/home.css
@@ -721,8 +721,6 @@ img {
 .homelogged-calendar {
     background-color: var(--purple);
     width: 100%;
-    margin-bottom: 32px;
-    /* margin-top: 84px; */
 }
 
 .homelogged-calendar__content {
@@ -1729,7 +1727,9 @@ img {
     .homelogged-foryou .section-title {
         margin-bottom: 24px;
     }
-
+    .calendar-mounth__time {
+        font-size: 16px;
+    }
     .home .section-title {
         padding: 0 48px;
     }
@@ -1804,7 +1804,7 @@ img {
     .homelogged-calendar__right .day-cell--faded {
         font-size: 14px;
     }
-    .homelogged-calendar__right .day-cell{
+    .homelogged-calendar__right .day-cell {
         padding: 4px 0px;
     }
     .day-cell--today {
@@ -1978,7 +1978,7 @@ img {
     .calendar-mounth {
         border-radius: 8px 8px 0 0;
         overflow: hidden;
-        margin-top: 20px;
+        margin-top: 36px;
     }
 
     .week-container {
@@ -1986,7 +1986,7 @@ img {
     }
 
     .calendar-status {
-       display: none;
+        display: none;
     }
 
     .calendar-status__title {
@@ -2235,11 +2235,11 @@ img {
     }
 
     .calendar-mounth__prev {
-        left: 60px;
+        left: 100px;
     }
 
     .calendar-mounth__next {
-        right: 60px;
+        right: 100px;
     }
 
     .homelogged-location .item-top {
