--- a/src/features/Chat/ChatAll/style.css
+++ b/src/features/Chat/ChatAll/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 100vh;
 }
 
 .chat-all-cnt-left {
@@ -108,15 +109,25 @@
     width: 75%;
     height: calc(100vh - 95px);
     background-color: var(--white);
-    
-}
-.chat-all-cnt-right__head{
-    padding: 12px 8px;
-}
-.chat-all-cnt-right__head .head-left-avatar{
     position: relative;
 }
-.chat-all-cnt-right__head .head-left-avatar .dot{
+
+.chat-all-cnt-right__head {
+    padding: 12px 8px;
+    box-shadow: 0px 4px 6px rgb(0 0 0 / 10%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--white);
+    z-index: 2;
+}
+
+.chat-all-cnt-right__head .head-left-avatar {
+    position: relative;
+}
+
+.chat-all-cnt-right__head .head-left-avatar .dot {
     width: 12px;
     height: 12px;
     border-radius: 100%;
@@ -127,26 +138,116 @@
     margin: 0px 0px 0px 0px;
     z-index: 2;
 }
-.chat-all-cnt-right__head .head-left-avatar img{
+
+.chat-all-cnt-right__head .head-left-avatar img {
     width: 36;
     height: 36px;
     border-radius: 100%;
     object-fit: cover;
 }
-.chat-all-cnt-right__head .head-left-title{
+
+.chat-all-cnt-right__head .head-left-title {
     display: flex;
     flex-direction: column;
     padding-left: 8px;
 }
-.chat-all-cnt-right__head .head-left-title span:nth-child(1){
+
+.chat-all-cnt-right__head .head-left-title span:nth-child(1) {
     font-size: 16px;
     line-height: 18px;
     font-weight: 700;
     color: var(--text-black);
 }
-.chat-all-cnt-right__head .head-left-title span:nth-child(2){
+
+.chat-all-cnt-right__head .head-left-title span:nth-child(2) {
     font-size: 12px;
     line-height: 14px;
     font-weight: 500;
     color: var(--text-hover);
+}
+
+.chat-all-cnt-right__body {
+    width: 100%;
+    height: calc(100% - 60px);
+    margin-top: 60px;
+    position: relative;
+}
+
+.chat-all-cnt-right__body-mess {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 56px;
+    overflow-y: scroll;
+}
+
+.chat-all-cnt-right__body-inp {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    background-color: var(--white);
+    padding: 8px 8px 8px 0px;
+}
+
+.chat-all-cnt-right__body-inp .input-wrap {
+    width: calc(100% - 52px);
+    position: relative;
+}
+
+.chat-all-cnt-right__body-inp .input-wrap input {
+    width: 100%;
+    padding: 8px 12px;
+    padding-right: 32px;
+    border: none;
+    outline: none;
+    background-color: var(--grey);
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--text-black);
+    border-radius: 17px;
+}
+
+.chat-all-cnt-right__body-inp-send-btn {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    margin: 0px 10px 4px 0px;
+}
+
+@media screen and (max-width: 767px) {
+    .chat-all-cnt-left{
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        transition: all .2s;
+    }
+    .chat-all-cnt-left__hide{
+        width: 0px;
+        transition: all .2s;
+    }
+    .chat-all-cnt-left__head-inp{
+        width: calc(100% - 160px);
+    }
+    .chat-all-cnt-right{
+        width: 0px;
+        height: 100%;
+        overflow: hidden;
+        transition: all .2s;
+    }
+    .chat-all-cnt-right__act{
+        width: 100%;
+        transition: all .2s;
+    }
+    .chat-all-cnt-right__head .head-left .chat-all-cnt__head-btn{
+        margin: 0px;
+        margin-right: 6px;
+        background-color: transparent;
+        padding-left: 0px;
+    }
 }
