--- a/src/features/Footer/footer.css
+++ b/src/features/Footer/footer.css
@@ -112,6 +112,15 @@
     height: 100%;
     object-fit: cover;
 }
+.footer-copy-right{
+    width: 100%;
+    text-align: center;
+    margin-top: 32px;
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 500;
+    color: var(--white);
+}
 
 /* Mobile */
 @media only screen and (max-width: 769px) {
