--- a/src/features/SearchResults/search-results.css
+++ b/src/features/SearchResults/search-results.css
@@ -125,20 +125,20 @@
         position: fixed;
         z-index: 100;
     }
-    .se-re-header-mb .input{
+    .se-re-header-mb .input {
         padding: 8px 12px;
         background-color: var(--grey_2);
         width: calc(100% - 44px);
         border-radius: 8px;
     }
-    .se-re-header-mb .input span{
+    .se-re-header-mb .input span {
         font-size: 12px;
         line-height: 22px;
         font-weight: 600;
         color: var(--text-black);
         margin-left: 6px;
     }
-    .se-re-header-mb .filter{
+    .se-re-header-mb .filter {
         border-radius: 8px;
         border: none;
         outline: none;
@@ -256,11 +256,33 @@
         overflow: hidden;
         position: relative;
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    .re-change-banner img {
+    .re-change-banner .re-change-banner-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        z-index: 1;
         object-fit: cover;
+        filter: blur(2px);
+        -webkit-filter: blur(2px);
+    }
+    .re-change-banner .re-change-banner-img {
+        width: 120px;
+        height: 120px;
+        object-fit: contain;
+        z-index: 2;
+        background: rgba(145, 145, 145, 0.25);
+        background: rgba(145, 145, 145, 0);
+        box-shadow: 0 8px 32px 0 rgba(98, 98, 98, 0.37);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        border-radius: 100px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
     }
     .re-change-favorite {
         position: absolute;
