--- a/src/features/Account/components/UserAddress/user_address.css
+++ b/src/features/Account/components/UserAddress/user_address.css
@@ -49,7 +49,7 @@
     width: 100%;
     padding: 0px 12px;
     border-radius: 12px;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
 .lis-province-ac,
@@ -87,6 +87,9 @@
     font-weight: 700;
     color: var(--bgWhite);
     border-radius: 18px;
+    display: flex;
+    justify-content: center;
+    margin-top: 12px;
 }
 
 .us-add_item {
