--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -117,6 +117,9 @@
 .org-search-show {
     height: 100vh;
 }
+.re-change-map {
+    display: none;
+}
 
 .org-detail {
     padding: 32px 0px 24px 0;
@@ -183,6 +186,7 @@
 .org-detail__cnt-bot .org-avatar {
     width: 148px;
     height: 148px;
+    flex-shrink: 0;
     border-radius: 100%;
     border: solid 4px var(--bgWhite);
     background-color: var(--bgWhite);
